[package]
name = "pretty-printing"
authors = ["Xi Xiao <tdxiaoxi2@gmail.com>"]
version = "0.0.4"
edition = "2021"
description = "A simple pretty print implementation"
license = "MIT OR Apache-2.0"

[dependencies]
typed-arena = "2.0.2"
tree-sitter = "0.24.3"
anyhow = "1.0.86"
colored = "2.1.0"

[dev-dependencies]
serde_json = "1.0.132"

[build-dependencies]
cc = "1.1.10"

